ajout de la table phases et de sa logique mais aussi de sa documentation  dans son cotrolleur
